--- a/configuration/.config/i3/config
+++ b/configuration/.config/i3/config
@@ -9,10 +9,16 @@
 # layout, use the i3-config-wizard
 #
 
-exec xrandr --output DP-0 --auto --left-of HDMI-0 --output HDMI-0 --auto --below DP-2
+exec --no-startup-id picom -b
+
+set $primary_screen HDMI-4 DP-3
+set $left_screen DP-3
+set $top_screen DP-4
+
+# xrandr --output DP-3 --auto --left-of HDMI-4 --output HDMI-4 --auto --below DP-4
 
 # Font for window titles. Will also be used by the bar unless a different font
-# is used in the bar {} block below.
+# is used in the bar {} block below
 font pango:monospace 8
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
@@ -197,6 +203,12 @@ mode "resize" {
 }
 
 bindsym Mod1+r mode "resize"
+
+for_window [class="^.*"] border pixel 0
+
+gaps inner 5
+gaps outer 5
+
 
 # class                 border  bground text    indicator child_border
 client.focused          #6272A4 #6272A4 #F8F8F2 #6272A4   #6272A4
