--- a/dotfiles/.config/i3/config
+++ b/dotfiles/.config/i3/config
@@ -15,15 +15,14 @@ set $primary_screen HDMI-4 DP-3
 set $left_screen DP-3
 set $top_screen DP-4
 
+
+set $mod Mod4
+
 # xrandr --output DP-3 --auto --left-of HDMI-4 --output HDMI-4 --auto --below DP-4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below
 font pango:monospace 8
-
-# This font is widely installed, provides lots of unicode glyphs, right-to-left
-# text rendering and scalability on retina/hidpi displays (thanks to pango).
-#font pango:DejaVu Sans Mono 8
 
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
@@ -49,10 +48,11 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 
 # use these keys for focus, movement, and resize directions when reaching for
 # the arrows is not convenient
-set $up l
-set $down k
-set $left j
-set $right semicolon
+set $up h
+set $down j
+set $left k
+set $right l
+
 
 # use Mouse+Mod1 to drag floating windows to their wanted position
 floating_modifier Mod1
