--- a/dotfiles/.config/tmux/tmux.conf
+++ b/dotfiles/.config/tmux/tmux.conf
@@ -11,7 +11,12 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g @plugin 'git@bitbucket.com:user/plugin'
 
 set -g @plugin 'dracula/tmux'
-set -g @dracula-plugins "cpu-usage gpu-usage ram-usage"
+set -g @dracula-plugins "cpu-usage ram-usage"
+
+set -g @dracula-show-flags true
+set -g @dracula-show-left-icon window
+
+set -g @dracula-powerline-bg-transparent true
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
