files? nvidia working

--- a/dotfiles/.config/polybar/config.ini
+++ b/dotfiles/.config/polybar/config.ini
@@ -17,9 +17,9 @@
 ;==========================================================
 
 [monitors]
-center = HDMI-4
-top = DP-4
-left = DP-3
+center = HDMI-0
+top = DP-2
+left = DP-0
 
 
 [colors]
@@ -204,11 +204,11 @@ index-sort = true
 
 ; Create click handler used to focus workspace
 ; Default: true
-enable-click = false
+enable-click = true
 
 ; Create scroll handlers used to cycle workspaces
 ; Default: true
-enable-scroll = false
+enable-scroll = true
 
 ; Wrap around when reaching the first/last workspace
 ; Default: true
@@ -247,8 +247,8 @@ format = <label-state> <label-mode>
 ;   %mode%
 ; Default: %mode%
 label-mode = %mode%
-label-mode-padding = 2
-label-mode-background = #e60053
+label-mode-padding = 1
+label-mode-background = ${colors.background}
 
 ; Available tokens:
 ;   %name%
@@ -257,10 +257,10 @@ label-mode-background = #e60053
 ;   %output%
 ; Default: %icon% %name%
 label-focused = %index%
-label-focused-foreground = #ffffff
-label-focused-background = #3f3f3f
-label-focused-underline = #fba922
-label-focused-padding = 4
+label-focused-foreground = ${colors.foreground}
+label-focused-background = ${colors.background-alt}
+label-focused-underline = ${colors.primary}
+label-focused-padding = 2
 
 ; Available tokens:
 ;   %name%
@@ -269,7 +269,7 @@ label-focused-padding = 4
 ;   %output%
 ; Default: %icon% %name%
 label-unfocused = %index%
-label-unfocused-padding = 4
+label-unfocused-padding = 2
 
 ; Available tokens:
 ;   %name%
@@ -278,8 +278,8 @@ label-unfocused-padding = 4
 ;   %output%
 ; Default: %icon% %name%
 label-visible = %index%
-label-visible-underline = #555555
-label-visible-padding = 4
+label-visible-underline = ${colors.background-alt}
+label-visible-padding = 2
 
 ; Available tokens:
 ;   %name%
@@ -288,14 +288,14 @@ label-visible-padding = 4
 ;   %output%
 ; Default: %icon% %name%
 label-urgent = %index%
-label-urgent-foreground = #000000
-label-urgent-background = #bd2c40
-label-urgent-padding = 4
+label-urgent-foreground = #f8f8f2
+label-urgent-background = #ff79c6
+label-urgent-padding = 2
 
 ; Separator in between workspaces
-label-separator = |
-label-separator-padding = 2
-label-separator-foreground = #ffb52a
+label-separator = 
+label-separator-padding = 0
+label-separator-foreground = #8be9fd
 
 [module/xworkspaces]
 type = internal/xworkspaces
