--- a/dotfiles/.config/i3/config
+++ b/dotfiles/.config/i3/config
@@ -235,7 +235,8 @@ exec --no-startup-id $HOME/.config/polybar/launch.sh
 
 
 
-assign [class="Spotify*"] $ws10
-assign [class="*Discord*"] $ws10
+for_window [class="Spotify"] move to workspace $ws10, workspace --no-auto-back-and-forth $ws10
+for_window [instance="Discord"] move to workspace $ws10, workspace --no-auto-back-and-forth $ws10
+for_window [instance="Godot_Engine"] move to workspace $ws9, workspace --no-auto-back-and-forth $ws9
 
 for_window [workspace=$ws10] layout tabbed
