--- a/dotfiles/.config/polybar/config.ini
+++ b/dotfiles/.config/polybar/config.ini
@@ -38,23 +38,27 @@ disabled = #6272a4
 [bar/primary]
 monitor = ${monitors.center}
 width = 100%
-height = 24pt
-radius = 6
+height = 15pt
+radius = 2
 
 ; dpi = 96
 
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-line-size = 3pt
+line-size = 2pt
 
-border-size = 4pt
+border-bottom = 0pt
+border-size = 0pt
 border-color = #00000000
 
 padding-left = 0
 padding-right = 1
 
 module-margin = 1
+
+margin-top = 0
+margin-bottom = 0
 
 separator = |
 separator-foreground = ${colors.disabled}
@@ -83,8 +87,8 @@ wm-restack = i3
 [bar/left]
 monitor = ${monitors.left}
 width = 100%
-height = 24pt
-radius = 6
+height = 15pt
+radius = 2
 
 ; dpi = 96
 
@@ -93,11 +97,14 @@ foreground = ${colors.foreground}
 
 line-size = 3pt
 
-border-size = 4pt
+border-size = 0pt
 border-color = #00000000
 
 padding-left = 0
 padding-right = 1
+
+margin-top = 0
+margin-bottom = 0
 
 module-margin = 1
 
@@ -126,7 +133,7 @@ wm-restack = i3
 [bar/top]
 monitor = ${monitors.top}
 width = 100%
-height = 20pt
+height = 15pt
 radius = 6
 
 ; dpi = 96
@@ -136,7 +143,7 @@ foreground = ${colors.foreground}
 
 line-size = 3pt
 
-border-size = 4pt
+border-size = 0pt
 border-color = #00000000
 
 padding-left = 0
@@ -325,6 +332,7 @@ type = internal/fs
 interval = 25
 
 mount-0 = /
+mount-1 = /home
 
 label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_used%%
 
